# ops-brain

./: .env.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  GOTCHAS.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TODO.md  audit.toml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  justfile
.claude/agents/: ops-dev.md  reviewer.md
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: CONTRIBUTING.md  REFERENCE.md  agent-tokens.md  bus-trust.md  machine-callers.md
migrations/: 20260319000001_create_clients.sql  20260319000002_create_sites.sql  20260319000003_create_servers.sql  20260319000004_create_services.sql  20260319000005_create_server_services.sql  20260319000006_create_networks.sql  20260319000007_create_vendors.sql  20260319000008_create_runbooks.sql  20260319000009_create_incidents.sql  20260319000010_create_sessions.sql  20260319000011_create_handoffs.sql  20260319000012_create_knowledge.sql  20260319000013_create_fts_indexes.sql  20260319000014_create_updated_at_trigger.sql  20260322000001_create_monitors.sql  20260324000001_add_pgvector_embeddings.sql  20260324000002_fix_embedding_dimensions.sql  20260324000003_create_briefings.sql  20260325000001_add_zammad_to_clients.sql  20260325000002_create_ticket_links.sql  20260325100001_add_client_scope_to_runbooks.sql  20260325100002_add_cross_client_safe_to_knowledge.sql  20260325100003_create_audit_log.sql  20260326000001_add_cross_client_safe_to_incidents.sql  20260326100001_add_trigram_slug_indexes.sql  20260326200001_soft_deletes.sql  20260326300001_add_fts_to_inventory_tables.sql  20260326400001_create_runbook_executions.sql  20260326500001_add_client_slug_to_runbook_executions.sql  20260326500002_fix_stale_runbook_slugs.sql  20260327000001_add_source_recurrence_to_incidents.sql  20260327100001_phase12_severity_override_and_source_fix.sql  20260327200001_add_flap_threshold_to_monitors.sql  20260327300001_staleness_preferences_backlog.sql  20260327400001_add_incident_id_to_runbook_executions.sql  20260328000001_vendor_name_unique_index.sql  20260328100001_network_site_cidr_unique.sql  20260329000001_add_source_url_to_runbooks.sql  20260329000002_staleness_knowledge_services.sql  20260406000001_add_cc_identities.sql  (+13 more)
seed/: seed.sql
src/: api.rs  auth.rs  config.rs  db.rs  embeddings.rs  lib.rs  main.rs  metrics.rs  validation.rs  watchdog.rs  zammad.rs
src/models/: audit_log.rs  briefing.rs  cc_identity.rs  client.rs  handoff.rs  incident.rs  knowledge.rs  mod.rs  monitor.rs  network.rs  preference.rs  runbook.rs  runbook_execution.rs  server.rs  service.rs  session.rs  site.rs  ticket_link.rs  vendor.rs
src/repo/: audit_log_repo.rs  briefing_repo.rs  cc_identity_repo.rs  (+19 more)
tests/: common.rs  integration.rs
(+15 files in other folders)
