[package]
name = "ops-brain"
version = "4.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server team bus: cross-agent handoffs, knowledge, briefings"
repository = "https://github.com/TheK3nsai/ops-brain"

[dependencies]
# MCP SDK
rmcp = { version = "1.6", features = ["server", "transport-io", "transport-streamable-http-server"] }

# Async runtime
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "sync",
    "io-std",
    "io-util",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "derive",
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI & Config
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server
axum = "0.7"

# HTTP client (embedding API)
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Error handling
anyhow = "1"

[dev-dependencies]
# tower::ServiceExt::oneshot for driving the axum auth middleware + REST
# handlers in integration tests without binding a TCP listener.
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
